--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>USTC_Wings</groupId>
-  <artifactId>EColloabration</artifactId>
+  <artifactId>ECollaboration</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Tower Maven Webapp</name>
+  <name>ECollaboration Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
 
@@ -132,9 +132,8 @@
   </properties>
 
 
-
   <build>
-    <finalName>Tower</finalName>
+    <finalName>ECollaboration</finalName>
 
   </build>
 </project>
