--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
   <url>http://maven.apache.org</url>
 
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <org.hibernate-version>5.2.7.Final</org.hibernate-version>
+    </properties>
+
   <dependencies>
 
     <dependency>
