--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
           <artifactId>log4j-core</artifactId>
           <version>2.8</version>
       </dependency>
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.17</version>
+      </dependency>
 
 
     <!--hibernate5支持-->
@@ -125,16 +130,21 @@
           <artifactId>c3p0</artifactId>
           <version>0.9.1.2</version>
       </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+          <version>2.5</version>
+      </dependency>
 
   </dependencies>
 
 
 
 
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
+  <!--<properties>-->
+    <!--<maven.compiler.source>1.8</maven.compiler.source>-->
+    <!--<maven.compiler.target>1.8</maven.compiler.target>-->
+  <!--</properties>-->
 
 
   <build>
