日志配置文件乱码问题解决

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
-### ÉèÖÃ ###
+### è®¾ç½® ###
 log4j.rootLogger = debug,W,D,E,I
 
-### Êä³öWARN ¼¶±ğÒÔÉÏµÄÈÕÖ¾ ###
+### è¾“å‡º WARN çº§åˆ«çš„æ—¥å¿— ###
 log4j.appender.W = log4j.MyDailyRollingFileAppender
 log4j.appender.W.File = ../logs/warn/warn.log
 log4j.appender.W.Append = true
@@ -9,7 +9,7 @@ log4j.appender.W.Threshold = WARN
 log4j.appender.W.layout = org.apache.log4j.PatternLayout
 log4j.appender.W.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
-### Êä³öDEBUG ¼¶±ğÒÔÉÏµÄÈÕÖ¾ ###
+### è¾“å‡º DEBUG çº§åˆ«çš„æ—¥å¿— ###
 log4j.appender.D = log4j.MyDailyRollingFileAppender
 log4j.appender.D.File = ../logs/debug/debug.log
 log4j.appender.D.Append = true
@@ -17,7 +17,7 @@ log4j.appender.D.Threshold = DEBUG
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
-### Êä³öERROR ¼¶±ğÒÔÉÏµÄÈÕÖ¾ ###
+### è¾“å‡º ERROR çº§åˆ«çš„æ—¥å¿— ###
 log4j.appender.E = log4j.MyDailyRollingFileAppender
 log4j.appender.E.File = ../logs/error/error.log
 log4j.appender.E.Append = true
@@ -25,7 +25,7 @@ log4j.appender.E.Threshold = ERROR
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
-### Êä³öINFO ¼¶±ğÒÔÉÏµÄÈÕÖ¾ ###
+### è¾“å‡º INFO çº§åˆ«çš„æ—¥å¿— ###
 log4j.appender.I = log4j.MyDailyRollingFileAppender
 log4j.appender.I.File = ../logs/info/info.log
 log4j.appender.I.Append = true
