添加了一些针对tomcat部署的依赖     将日志放置的地方放在了logs文件夹里的ECollaboration文件夹里

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger = debug,W,D,E,I
 
 ### 输出 WARN 级别的日志 ###
 log4j.appender.W = log4j.MyDailyRollingFileAppender
-log4j.appender.W.File = ../logs/warn/warn.log
+log4j.appender.W.File = ../logs/ECollaboration/warn/warn.log
 log4j.appender.W.Append = true
 log4j.appender.W.Threshold = WARN
 log4j.appender.W.layout = org.apache.log4j.PatternLayout
@@ -11,7 +11,7 @@ log4j.appender.W.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] 
 
 ### 输出 DEBUG 级别的日志 ###
 log4j.appender.D = log4j.MyDailyRollingFileAppender
-log4j.appender.D.File = ../logs/debug/debug.log
+log4j.appender.D.File = ../logs/ECollaboration/debug/debug.log
 log4j.appender.D.Append = true
 log4j.appender.D.Threshold = DEBUG
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
@@ -19,7 +19,7 @@ log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] 
 
 ### 输出 ERROR 级别的日志 ###
 log4j.appender.E = log4j.MyDailyRollingFileAppender
-log4j.appender.E.File = ../logs/error/error.log
+log4j.appender.E.File = ../logs/ECollaboration/error/error.log
 log4j.appender.E.Append = true
 log4j.appender.E.Threshold = ERROR
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
@@ -27,7 +27,7 @@ log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] 
 
 ### 输出 INFO 级别的日志 ###
 log4j.appender.I = log4j.MyDailyRollingFileAppender
-log4j.appender.I.File = ../logs/info/info.log
+log4j.appender.I.File = ../logs/ECollaboration/info/info.log
 log4j.appender.I.Append = true
 log4j.appender.I.Threshold = INFO
 log4j.appender.I.layout = org.apache.log4j.PatternLayout
