--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,13 @@
           <version>2.5</version>
       </dependency>
 
+      <!--防止内存泄漏-->
+      <dependency>
+          <groupId>se.jiderhamn.classloader-leak-prevention</groupId>
+          <artifactId>classloader-leak-prevention-servlet</artifactId>
+          <version>2.1.0</version>
+      </dependency>
+
   </dependencies>
 
 
@@ -146,6 +153,24 @@
 
   <build>
     <finalName>ECollaboration</finalName>
+      <plugins>
+          <plugin>
 
+              <groupId>org.apache.tomcat.maven</groupId>
+              <artifactId>tomcat7-maven-plugin</artifactId>
+              <version>2.2</version>
+              <configuration>
+
+                  <url>http://128.199.132.67:8080/manager/text</url>
+                  <!--<server>tomcat7</server>-->
+                  <username>root</username>
+                  <password>123456</password>
+                  <update>true</update>
+                  <path>/ec</path>
+
+              </configuration>
+
+          </plugin>
+      </plugins>
   </build>
 </project>
