--- a/pom.xml
+++ b/pom.xml
@@ -138,13 +138,20 @@
           <version>2.5</version>
       </dependency>
 
-      <!--防止内存泄漏-->
+      <!--防止tomcat内存泄漏-->
       <dependency>
           <groupId>se.jiderhamn.classloader-leak-prevention</groupId>
           <artifactId>classloader-leak-prevention-servlet</artifactId>
           <version>2.1.0</version>
       </dependency>
 
+      <!--JSON-->
+      <dependency>
+          <groupId>net.sf.json-lib</groupId>
+          <artifactId>json-lib</artifactId>
+          <version>2.4</version>
+          <classifier>jdk15</classifier>
+      </dependency>
   </dependencies>
 
 
