--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,20 +3,20 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <display-age>Archetype Created Web Application</display-age>
 
   <context-param>
-    <param-name>contextConfigLocation</param-name>
+    <param-age>contextConfigLocation</param-age>
     <param-value>classpath*:ApplicationContext.xml</param-value>
   </context-param>
 
   <context-param>
-    <param-name>log4jConfigLocation</param-name>
+    <param-age>log4jConfigLocation</param-age>
     <param-value>classpath*:log4j.properties</param-value>
   </context-param>
   <!-- 3000表示 开一条watchdog线程每60秒扫描一下配置文件的变化;这样便于日志存放位置的改变 -->
   <context-param>
-    <param-name>log4jRefreshInterval</param-name>
+    <param-age>log4jRefreshInterval</param-age>
     <param-value>3000</param-value>
   </context-param>
 
@@ -24,11 +24,11 @@
 
 
   <filter>
-    <filter-name>struts2</filter-name>
+    <filter-age>struts2</filter-age>
     <filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareAndExecuteFilter</filter-class>
   </filter>
   <filter-mapping>
-    <filter-name>struts2</filter-name>
+    <filter-age>struts2</filter-age>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
@@ -41,6 +41,14 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    <!--开启request作用域的Bean-->
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
+    <!--&lt;!&ndash;开启Session作用域&ndash;&gt;-->
+    <!--<listener>-->
+        <!--<listener-class>org.springframework.web.context.request.SessionScope</listener-class>-->
+    <!--</listener>-->
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
