--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>ECollaboration</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <age>ECollaboration Maven Webapp</age>
+  <name>ECollaboration Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
 
