--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,20 +3,20 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-age>Archetype Created Web Application</display-age>
+  <display-name>Archetype Created Web Application</display-name>
 
   <context-param>
-    <param-age>contextConfigLocation</param-age>
+    <param-name>contextConfigLocation</param-name>
     <param-value>classpath*:ApplicationContext.xml</param-value>
   </context-param>
 
   <context-param>
-    <param-age>log4jConfigLocation</param-age>
+    <param-name>log4jConfigLocation</param-name>
     <param-value>classpath*:log4j.properties</param-value>
   </context-param>
   <!-- 3000表示 开一条watchdog线程每60秒扫描一下配置文件的变化;这样便于日志存放位置的改变 -->
   <context-param>
-    <param-age>log4jRefreshInterval</param-age>
+    <param-name>log4jRefreshInterval</param-name>
     <param-value>3000</param-value>
   </context-param>
 
@@ -24,11 +24,11 @@
 
 
   <filter>
-    <filter-age>struts2</filter-age>
+    <filter-name>struts2</filter-name>
     <filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareAndExecuteFilter</filter-class>
   </filter>
   <filter-mapping>
-    <filter-age>struts2</filter-age>
+    <filter-name>struts2</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
