--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,18 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+
+
+        <!--将session交给servlet filter来管理，每当一个请求来之后就会开-->
+        <!--启一个session，只有当响应结束后才会关闭-->
+<!--<filter-name>hibernateFilter</filter-name>-->
+    <!--<filter-class>  org.springframework.orm.hibernate3.support.OpenSessionInViewFilter </filter-class>-->
+<!--</filter>-->
+<!--<filter-mapping>-->
+    <!--<filter-name>hibernateFilter</filter-name>-->
+<!--<url-pattern>/*</url-pattern>-->
+<!--</filter-mapping>-->
+
     <!--防止tomcat内存溢出-->
     <listener>
         <listener-class>se.jiderhamn.classloader.leak.prevention.ClassLoaderLeakPreventorListener</listener-class>
